--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.10.6",
     "framer-motion": "^10.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
